# systematic-review-automation

./: .gitignore  LICENSE  README.md  env.example
covidence-downloader/: README.md  covidence-pdf-downloader.js  package.json
pdf-retriever/: README.md  batch-retriever.js  library-retriever.js  logger.js  package.json  ris-parser.js
rct-extractor/: README.md  __init__.py  azure-content-understanding-client.js  cli.py  csv-writer.js  extract-rct.js  extractor.py  field-schema.json  logger.js  package.json  pipeline.py  pyproject.toml  requirements.txt  rob_assessor.py  schema.py
risk-of-bias/: env.template
risk-of-bias/risk_of_bias/: cli.py  config.py  run_framework.py
