[project]
name = "rct-extraction-pipeline"
description = "AI-driven systematic review data extraction pipeline for RCT publications"
version = "1.0.0"
authors = [
    {name = "Mohamed Elahmedi"}
]
requires-python = ">=3.11"

dependencies = [
    # LangChain ecosystem
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-chroma>=0.1.0",
    "langchain-community>=0.3.0",
    
    # Document processing
    "pypdf>=4.0.0",
    "unstructured>=0.15.0",
    "pdf2image>=1.16.0",
    
    # Embeddings & Vector store
    "chromadb>=0.5.0",
    "tiktoken>=0.7.0",
    
    # Data processing
    "pandas>=2.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    
    # Risk of Bias (local fork)
    "openai>=1.50.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "mypy>=1.11.0",
    "isort>=5.13.0",
]

[project.scripts]
rct-extract = "rct_extraction_pipeline.cli:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
